# web_crawler

./: Cargo.toml
src/: lib.rs  main.rs  scheduler.rs  task.rs  worker.rs
test_data/: monzo.txt  test_5_instances.txt
