[package]
name = "web_crawler"
version = "0.1.0"
authors = ["tomos <tomos@commerceblock.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rayon = "0.6.0"
regex = "1"
