[package]
name = "web_crawler"
version = "0.1.0"
authors = ["tomos <tomos@commerceblock.com>"]
edition = "2018"


[dependencies]
futures = "0.3.12"
reqwest = { version = "0.11.0", features = ["json", "blocking"] }
tokio = { version = "1.2.0", features = ["full"] }
regex = "1.4.3"
rand = {version = "0.8.3", features = ["std"]}
async-std = "1.9.0"

[dev-dependencies]
tokio-test = "0.4.0"
